--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -31,10 +31,12 @@ jobs:
           cache: 'npm'
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
       - name: Build
         run: npm run build
+        env:
+          CI: false
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
